tests/invalid_inputs/sema/global_var_redeclaration_02.cpp

int a;
// error
char a;
